clang-tidy-out.log
[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ModelTest.cpp:1:1: [0m[0;1;31merror: [0m[1mincluded header Model.hpp is not used directly [misc-include-cleaner,-warnings-as-errors][0m
    1 | #include "utility/Model.hpp"[0m
      | [0;1;32m^~~~~~~~~~~~~~~~~~~~~~~~~~~~
[0m    2 | #include "fixtures/TestVulkanContext.hpp"[0m
[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ModelTest.cpp:2:1: [0m[0;1;31merror: [0m[1mincluded header TestVulkanContext.hpp is not used directly [misc-include-cleaner,-warnings-as-errors][0m
    2 | #include "fixtures/TestVulkanContext.hpp"[0m
      | [0;1;32m^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[0m    3 | [0m
[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:3:1: [0m[0;1;31merror: [0m[1mincluded header TestVulkanContext.hpp is not used directly [misc-include-cleaner,-warnings-as-errors][0m
    3 | #include "fixtures/TestVulkanContext.hpp"[0m
      | [0;1;32m^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[0m    4 | #include "utility/object/ObjectBuilder.hpp"[0m
[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:13:26: [0m[0;1;31merror: [0m[1mno header providing "vv::Model" is directly included [misc-include-cleaner,-warnings-as-errors][0m
    4 | #include "utility/object/ObjectBuilder.hpp"[0m
    5 | [0m
    6 | #include "gtest/gtest.h"[0m
    7 | [0m
    8 | #include <utility>[0m
    9 | [0m
   10 | namespace vv::test[0m
   11 | {[0m
   12 | [0m
   13 | class ModelMock : public Model {};[0m
      | [0;1;32m                         ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:40:11: [0m[0;1;31merror: [0m[1mno header providing "vv::ObjectId_t" is directly included [misc-include-cleaner,-warnings-as-errors][0m
    4 |     const ObjectId_t id1{ o1.getId() };[0m
      | [0;1;32m          ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:65:26: [0m[0;1;31merror: [0m[1mno header providing "std::make_unique" is directly included [misc-include-cleaner,-warnings-as-errors][0m
    8 |     auto component{ std::make_unique<ColorComponent>(color) };[0m
      | [0;1;32m                         ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:65:38: [0m[0;1;31merror: [0m[1mno header providing "vv::ColorComponent" is directly included [misc-include-cleaner,-warnings-as-errors][0m
    5 |     auto component{ std::make_unique<ColorComponent>(color) };[0m
      | [0;1;32m                                     ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:70:33: [0m[0;1;31merror: [0m[1mno header providing "vv::ModelComponent" is directly included [misc-include-cleaner,-warnings-as-errors][0m
    5 |     EXPECT_FALSE(o.hasComponent<ModelComponent>());[0m
      | [0;1;32m                                ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:71:33: [0m[0;1;31merror: [0m[1mno header providing "vv::PointLightComponent" is directly included [misc-include-cleaner,-warnings-as-errors][0m
    5 |     EXPECT_FALSE(o.hasComponent<PointLightComponent>());[0m
      | [0;1;32m                                ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:72:33: [0m[0;1;31merror: [0m[1mno header providing "vv::TransformComponent" is directly included [misc-include-cleaner,-warnings-as-errors][0m
    5 |     EXPECT_FALSE(o.hasComponent<TransformComponent>());[0m
      | [0;1;32m                                ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:129:16: [0m[0;1;31merror: [0m[1mno header providing "std::shared_ptr" is directly included [misc-include-cleaner,-warnings-as-errors][0m
  129 |     const std::shared_ptr<Model> model{ std::make_shared<ModelMock>() };[0m
      | [0;1;32m               ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/ObjectTest.cpp:129:46: [0m[0;1;31merror: [0m[1mno header providing "std::make_shared" is directly included [misc-include-cleaner,-warnings-as-errors][0m
  129 |     const std::shared_ptr<Model> model{ std::make_shared<ModelMock>() };[0m
      | [0;1;32m                                             ^
[0m[1m/home/felix/dev/cpp/VulkanVoxels/tests/utility/TransformTest.cpp:1:1: [0m[0;1;31merror: [0m[1mincluded header Object.hpp is not used directly [misc-include-cleaner,-warnings-as-errors][0m
    1 | #include "utility/object/Object.hpp"[0m
      | [0;1;32m^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[0m    2 | #include "utility/object/components/TransformComponent.hpp"[0m
